# heavenly-hosts

./: LICENSE  README.md  SPEC-1-Heavenly-Hosts-MVP.md  compose.yaml  requirements.txt
.github/workflows/: ci.yml
app/: cell.py  dissolution.py  encryption.py  funnel_dag.py  main.py  models.py  resonance.py  storage.py  visualize.py
docker/: Dockerfile
mvp/: README.md  pyproject.toml
mvp/.github/workflows/: ci.yml
mvp/src/hhp/: crypto.py  dag.py  replay.py
mvp/tests/: test_resonance.py
src/hhp/: api.py  config.py  cover.py  dag.py  discovery.py  packet.py  resonance.py  transport.py
tests/: test_api.py  test_encryption.py  test_packet.py  test_transport.py
