[project]
name = "hhp"
version = "0.1.0"
requires-python = ">=3.11"
description = "Heavenly Hosts Protocol (HHP) – research MVP"
readme = "README.md"
authors = [{name="HHP Authors"}]
license = {text = "Apache-2.0"}
dependencies = [
  "pynacl==1.6.0",
  "aioquic==1.3.0",
  "zeroconf==0.148.0",
  "fastapi==0.119.0",
  "uvicorn[standard]==0.37.0",
  "pyyaml>=6.0.2",
  "numpy>=2.1.1"
]

[tool.setuptools.package-data]
hhp = ["py.typed"]
